force-app/main/default/objects/Physician__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <formula>TEXT(FLOOR((TODAY() -  Practicing_From__c  )/365)) &amp;&apos; YEARS&apos; &amp; &apos; &apos; &amp; 
TEXT(FLOOR(MOD((TODAY() - Practicing_From__c),365)/30)) &amp;&apos; MONTHS&apos; &amp; &apos; &apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Experience</label>
    <type>Text</type>
</CustomField>