force-app/main/default/objects/Physician__c/fields/Physician_ID__c.field-meta.xml
<CustomField>
    <fullName>Physician_ID__c</fullName>
    <label>Physician ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>