force-app/main/default/objects/Physician__c/fields/Practicing_From__c.field-meta.xml
<CustomField>
    <fullName>Practicing_From__c</fullName>
    <label>Practicing From</label>
    <type>Date</type>
</CustomField>