force-app/main/default/objects/Physician__c/fields/Professional_Statement__c.field-meta.xml
<CustomField>
    <fullName>Professional_Statement__c</fullName>
    <label>Professional Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>