force-app/main/default/objects/Physician__c/fields/Specialization_Price__c.field-meta.xml
<CustomField>
    <fullName>Specialization_Price__c</fullName>
    <label>Specialization Price</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Specializations__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>800</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>1200</fullName>
            </value>
            <value>
                <fullName>1500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>