force-app/main/default/objects/Physician__c/fields/Specializations__c.field-meta.xml
<CustomField>
    <fullName>Specializations__c</fullName>
    <label>Specializations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Endocrinology</fullName>
            </value>
            <value>
                <fullName>Rheumatology</fullName>
            </value>
            <value>
                <fullName>General Practice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>