force-app/main/default/objects/Physician__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Mobile__c</columns>
    <columns>Phone__c</columns>
    <columns>Practicing_From__c</columns>
    <columns>Specialization_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>